--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "@ionic-native/splash-screen": "4.7.0",
     "@ionic-native/status-bar": "4.7.0",
     "@ionic/storage": "2.1.3",
-    "cordova-android": "7.0.0",
+    "angular2-signaturepad": "^2.8.0",
+    "cordova-android": "^7.1.0",
     "cordova-browser": "5.0.3",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.1.2",
@@ -35,6 +36,7 @@
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "rxjs": "5.5.10",
+    "signature_pad": "^2.3.2",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.26"
   },
